# erpc

./: .gitignore  CMakeLists.txt
android/: settings.gradle.kts
android/erpclib/: build.gradle.kts
android/erpclib/src/androidTest/java/com/dreamsmart/erpclib/: ExampleInstrumentedTest.kt
android/erpclib/src/main/java/com/dreamsmart/erpclib/: NativeLib.kt
android/erpclib/src/test/java/com/dreamsmart/erpclib/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/helloclient/: build.gradle.kts
android/helloclient/src/androidTest/java/com/dreamsmart/helloclient/: ExampleInstrumentedTest.kt
android/helloclient/src/main/cpp/: CMakeLists.txt  helloclient.cpp
android/helloclient/src/main/java/com/dreamsmart/helloclient/: MainActivity.kt
android/helloclient/src/main/res/layout/: activity_main.xml
android/helloclient/src/main/res/values/: strings.xml  themes.xml
android/helloclient/src/main/res/values-night/: themes.xml
android/helloclient/src/test/java/com/dreamsmart/helloclient/: ExampleUnitTest.kt
android/helloserver/: build.gradle.kts
android/helloserver/src/androidTest/java/com/dreamsmart/helloserver/: ExampleInstrumentedTest.kt
android/helloserver/src/main/: AndroidManifest.xml
android/helloserver/src/main/cpp/: CMakeLists.txt  JNIThreadAttacher.h  helloserver.cpp
android/helloserver/src/main/java/com/dreamsmart/helloserver/: MainActivity.kt
android/helloserver/src/main/res/layout/: activity_main.xml
android/helloserver/src/main/res/values/: strings.xml
android/helloserver/src/test/java/com/dreamsmart/helloserver/: ExampleUnitTest.kt
cmake/: kconfig.cmake
erpc_c/: erpc_c_sources.cmake
erpc_c/infra/: erpc_common.h
erpc_c/setup/: erpc_arbitrated_client_setup.cpp  erpc_client_setup.cpp
erpc_c/transports/: erpc_spp_api.h  erpc_spp_transport.cpp  erpc_spp_transport.hpp  erpc_tcp_transport.cpp
examples/: CMakeLists.txt
examples/hello_world/c/: main_client.cpp
examples/hello_world2/: CMakeLists.txt  config.h
examples/hello_world2/c/: client.version  hello_world_client.cpp  hello_world_client.h  hello_world_server.cpp  main_client.cpp  server.version
examples/hello_world2/c/include/: hello_world_server.h
examples/hello_world2/c/shim/: c_hello_world_client.cpp  c_hello_world_client.h  c_hello_world_server.cpp  c_hello_world_server.h  hello_world_client.cpp  hello_world_client.hpp  hello_world_common.h  hello_world_common.hpp  hello_world_interface.cpp  hello_world_interface.hpp  hello_world_server.cpp  hello_world_server.hpp
examples/hello_world2/java/src/main/java/org/example/hello_world/client/: TextServiceClient.java
examples/hello_world2/java/src/main/java/org/example/hello_world/common/: Constants.java
examples/hello_world2/java/src/main/java/org/example/hello_world/interfaces/: ITextService.java
examples/hello_world2/java/src/main/java/org/example/hello_world/server/: AbstractTextServiceService.java
examples/hello_world2/py/shim/: __init__.py
examples/hello_world2/py/shim/hello_world/: __init__.py  client.py  common.py  interface.py  server.py
